cmake_minimum_required(VERSION 3.2)	
set(CMAKE_CXX_STANDARD 20)
project(OpenGLDemos)

# 获取当前文件夹的子目录
function(GetCMakeSubDir result rootDir)
	file(GLOB_RECURSE allItem LIST_DIRECTORIES true ${rootDir}/*)
	string(LENGTH ${rootDir}/ rootDirLength)
	foreach (dir ${allItem})
		if (IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
			string(SUBSTRING ${dir} ${rootDirLength} -1 subDir)
			list(APPEND allSubDir ${subDir})
		endif()
	endforeach()
	set(${result} ${allSubDir} PARENT_SCPOE)
endfunction()

# 获取相于顶层cmake的相对目录
set(TopDir ${CMAKE_CURRENT_SOURCE_DIR})
function(GetRelativeDir relativeDir)
	STRING(LENGTH ${TopDir}/ strLength)
	STRING(SUBSTRING ${CMAKE_CURRENT_SOURCE_DIR} ${strLength} -1 dir)
	set(${relativeDir} ${dir} PARENT_SCOPE)
endfunction()
#LIST(APPEND allSubDir "AdvancedGLSL")
LIST(APPEND allSubDir "AdvancedGLSL")
LIST(APPEND allSubDir "CubeMap")
LIST(APPEND allSubDir "FrameBuffer")
LIST(APPEND allSubDir "FaceCull")
LIST(APPEND allSubDir "Blending")
LIST(APPEND allSubDir "StencilTest")
LIST(APPEND allSubDir "DepthTest")
LIST(APPEND allSubDir "Model")
LIST(APPEND allSubDir "LightMultiple")
LIST(APPEND allSubDir "LightCast")
LIST(APPEND allSubDir "LightingMaps")
LIST(APPEND allSubDir "Materials")
LIST(APPEND allSubDir "Light")
LIST(APPEND allSubDir "Camera")
LIST(APPEND allSubDir "CoordinateSystem")
LIST(APPEND allSubDir "Texture")
LIST(APPEND allSubDir "Shader")
LIST(APPEND allSubDir "Triangle")
LIST(APPEND allSubDir "Hello")
LIST(APPEND allSubDir "Components")
LIST(APPEND allSubDir "Libraries")


foreach(dirname ${allSubDir})
	add_subdirectory(${dirname})
endforeach()

set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "Other")